--- a/zero.html
+++ b/zero.html
@@ -12,5 +12,5 @@
     <li><a href="third.html">문의</a></li>
     </ol>
 
-<br><p><strong>극단 폴라로이드의 홈페이지에 오신 것을 환영합니다.</strong></p>
+<br><p><strong>극단 폴라로이드에 오신 것을 환영합니다.</strong></p>
 </html>
